[test] create category test with&without permission