@@ -10,13 +10,17 @@ import com.example.board.role.TeamRole;
 import com.example.board.role.TeamRoleRepository;
 import com.example.board.support.AbstractControllerTestSupport;
 import com.example.board.support.TestDataBuilder;
+import com.example.board.team.Team;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -34,23 +38,36 @@ public class CategoryControllerTest extends AbstractControllerTestSupport {
     @Autowired
     private TeamRoleRepository teamRoleRepository;
 
+    private Long getTeamIdFromUserPrincipal(){
+        Authentication authentication =  SecurityContextHolder.getContext().getAuthentication();
+        UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
+        return userPrincipal.getTestTeamId();
+    }
+
     @Test
     @WithMockTeamPermission(teamPermissions = {"MANAGE_CATEGORIES"})
-    void createCategoryTest() throws Exception {
-        UserPrincipal userPrincipal = (UserPrincipal) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        List<TeamRole> teamRoles = teamRoleRepository.findAllByTeamId(userPrincipal.getTestTeamId());
-        List<CategoryRolePermissionDTO> rolePermissions = teamRoles.stream()
-                .map(role -> new CategoryRolePermissionDTO(
-                        role.getId(),
-                        Set.of(CategoryPermission.VIEW_POST, CategoryPermission.CREATE_POST)
-                ))
-                .collect(Collectors.toList());
+    void createCategoryTest_withPermission() throws Exception {
+        Long teamId = getTeamIdFromUserPrincipal();
+        var DTO = builder.forCreateCategoryRequest(teamId, null, new HashSet<>(Arrays.asList(CategoryPermission.VIEW_POST)));
+        var request = objectMapper.writeValueAsString(DTO);
 
-        var request = objectMapper.writeValueAsString(new CreateCategoryRequest("category", "test category", rolePermissions));
-
-        mockMvc.perform(post("/teams/{teamId}/categories/create", userPrincipal.getTestTeamId())
+        mockMvc.perform(post("/teams/{teamId}/categories/create", teamId)
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(request))
                 .andExpect(status().isOk());
     }
+
+    @Test
+    @WithMockTeamPermission()
+    void createCategoryTest_withoutPermission() throws Exception {
+        Long teamId = getTeamIdFromUserPrincipal();
+        var DTO = builder.forCreateCategoryRequest(teamId, null, new HashSet<>(Arrays.asList(CategoryPermission.VIEW_POST)));
+        var request = objectMapper.writeValueAsString(DTO);
+
+        mockMvc.perform(post("/teams/{teamId}/categories/create", teamId)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(request))
+                .andExpect(status().isForbidden());
+    }
+
 }
